--- a/Assignment/app/src/main/AndroidManifest.xml
+++ b/Assignment/app/src/main/AndroidManifest.xml
@@ -10,13 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Assignment">
         <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
             android:name=".EndActivity"
             android:exported="false" />
         <activity
             android:name=".CheatActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".NameActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
